--- a/01-1.md
+++ b/01-1.md
@@ -1,13 +1,11 @@
 # ① IDEとは何か
 
 Integrated Development Environment（統合開発環境）の略称。  
-プログラム開発を行う上で必要なものを全部詰め込んだツールのこと。  
+プログラム開発を行う上で必要なものを詰め込んだツールのこと。  
 搭載している機能は下記の通り。  
 
-1. エディタ  
-   プログラムの編集や記述を行うためツール。シンタックスハイライト（あらかじめ指定された文中の特定の記号やキーワードなどを他とは異なる色で表示すること）や、自動補完などの機能が組み込まれている。
-2. コンパイラ・インタプリタ  
-   プログラムのコンパイルや実行を行うためのツールがIDEに統合されています。これにより、エラーの検出やデバッグが効率的に行えます。
+1. エディタ
+2. コンパイラ・インタプリタ
 3. デバッガ
 4. ビルドツール
 5. プロジェクト管理
