--- a/01-1.md
+++ b/01-1.md
@@ -11,3 +11,9 @@ Integrated Development Environment（統合開発環境）の略称。
 5. プロジェクト管理
 6. バージョン管理
 7. プラグインサポート
+
+一般的なIDEには、Visual Studio、Eclipse、IntelliJ IDEA、Visual Studio Codeなどがある。
+
+# ② Visual Studio Code（VSCode） とは何か
+
+Microsoftが開発した無料でオープンソースのテキストエディタおよびIDEのこと。
