--- a/01-1.md
+++ b/01-1.md
@@ -1,4 +1,4 @@
-# ① IDEとは何か
+## ① IDEとは何か
 
 Integrated Development Environment（統合開発環境）の略称。  
 プログラム開発を行う上で必要なものを詰め込んだツールのこと。  
@@ -14,6 +14,6 @@ Integrated Development Environment（統合開発環境）の略称。
 
 一般的なIDEには、Visual Studio、Eclipse、IntelliJ IDEA、Visual Studio Codeなどがある。
 
-# ② Visual Studio Code（VSCode） とは何か
+## ② Visual Studio Code（VSCode） とは何か
 
 Microsoftが開発した無料でオープンソースのテキストエディタおよびIDEのこと。
