--- a/インプット課題/01-1.md
+++ b/インプット課題/01-1.md
@@ -1,4 +1,4 @@
-## ① IDEとは何か
+## ① IDEとは何か。
 
 Integrated Development Environment（統合開発環境）の略称。  
 プログラム開発を行う上で必要なものを詰め込んだツールのこと。  
@@ -14,6 +14,14 @@ Integrated Development Environment（統合開発環境）の略称。
 
 一般的なIDEには、Visual Studio、Eclipse、IntelliJ IDEA、Visual Studio Codeなどがある。
 
-## ② Visual Studio Code（VSCode） とは何か
+## ② Visual Studio Code（VSCode） とは何か。
 
 Microsoftが開発した無料でオープンソースのテキストエディタおよびIDEのこと。
+
+## ③ GitHub とは何か。
+
+## ④ AWSとは何か。
+
+## ⑤ AWSにおける アカウント と ユーザー の違いは何か。
+
+## ⑥ AWSアカウントにおける rootユーザー と IAMユーザー の違いは何か。
