--- a/インプット課題/01-1.md
+++ b/インプット課題/01-1.md
@@ -1,7 +1,7 @@
 ## ① IDEとは何か。
 
 Integrated Development Environment（統合開発環境）の略称。  
-プログラム開発を行う上で必要なものを詰め込んだツールのこと。  
+プログラム開発を行う上で必要な機能を詰め込んだツールのこと。  
 搭載している機能は下記の通り。  
 
 1. エディタ
@@ -66,5 +66,5 @@ AWSの主な特徴は下記の通り。
 ## ⑥ AWSアカウントにおける rootユーザー と IAMユーザー の違いは何か。
 
 rootユーザーは、AWSアカウント全体に対する最高権限を持つアカウント所有者であり、通常は緊急時のアクセスに使用される。  
-一方で、IAMユーザーはより細かい権限の制御が可能で、セキュアなアクセス管理ができる。  
-通常、セキュリティの向上と業務の遂行のため、IAMユーザーの使用が推奨されている。
+一方で、IAMユーザーはより細かい権限の制御ができるため、セキュアなアクセス管理を可能となる。  
+通常、セキュリティ向上の観点からIAMユーザーを使用して作業することが推奨されている。
