--- a/インプット課題/02-1.md
+++ b/インプット課題/02-1.md
@@ -1,18 +1,42 @@
-## ① HTML とは何か。また、HTMLファイルの拡張子は何か。
+## ① HTML とは何か。また、HTMLファイルの拡張子は何か
 
 ウェブページを作成するための標準的なマークアップ言語のこと。文書の構造や要素を定義し、ブラウザがその文書を解釈して表示するための基本的な構文とタグ（マークアップ要素）から成り立っている。テキスト、画像、リンク、フォーム、動画、音声などを含むウェブページのコンテンツを記述するために使用される。  
 HTMLファイルは通常、「.html」という拡張子を持っている。この拡張子は、ファイルがHTML形式で記述されていることを示している。ブラウザは、.htmlファイルを解釈し、ユーザーに対して視覚的なウェブページとして表示する。
 
-## ② CSS とは何か。また、CSSファイルの拡張子は何か。
+## ② CSS とは何か。また、CSSファイルの拡張子は何か
 
 HTMLやXMLなどのマークアップ言語で書かれた文書の、スタイルやレイアウトを指定するためのスタイルシート言語のこと。HTMLが文書の構造を定義するのに対して、CSSはその文書の見栄えやスタイルを指定する。フォント、色、間隔、配置、アニメーションなど、様々なスタイルのプロパティを制御する。  
 通常、HTML文書内の特定の要素にスタイルを適用するために使用されるが、外部のCSSファイルにスタイルをまとめることもでき、複数のHTMLファイルで同じスタイルを共有することが可能である。  
 拡張子は通常「.css」である。この拡張子は、ファイルがCSS形式でスタイルが定義されていることを示している。
 
-## ③ JavaScript とは何か。また、JavaScriptファイルの拡張子は何か。
+## ③ JavaScript とは何か。また、JavaScriptファイルの拡張子は何か
 
-## ④ HTML / CSS / JavaScript のうち、ブラウザが最初に読み込むファイルはどれか。また、最初に読み込まれない他のファイルは、どのような理屈でブラウザが認識し読み込まれるのか。
+主にウェブページ上で動的なコンテンツを操作するために使用される。クライアントサイドのスクリプト言語であり、通常はウェブブラウザ上で実行され、ユーザーとの対話やウェブページの動的な更新が可能である。拡張子は通常「.js」である。  
+また、オブジェクト指向型の言語であり、クラスや継承の概念があるのが特徴。
 
-## ⑤ HTMLの タグ ・ 要素 ・ 属性 とは何か。
+## ④ HTML / CSS / JavaScript のうち、ブラウザが最初に読み込むファイルはどれか。また、最初に読み込まれない他のファイルは、どのような理屈でブラウザが認識し読み込まれるのか
 
-## ⑥ HTMLの属性のうち class属性 と id属性 の違いは何か。
+ブラウザが最初に読み込むファイルは、HTMLファイルである。
+
+* 読み込みの流れ  
+  1. HTMLファイルの読み込み：  
+   ブラウザは最初に指定されたHTMLファイルを取得し、その内容を解釈してページの構造を構築する。
+  2. CSSファイルの読み込み：  
+   HTML内で指定されたCSSファイルがあれば、ブラウザはそれを取得して、ページのスタイルやレイアウトを定義する。
+  3. JavaScriptファイルの読み込み：  
+   HTML内で指定されたJavaScriptファイルがあれば、ブラウザはそれを取得して、ページの動的な振る舞いや操作を定義する。通常、JavaScriptファイルはHTMLとCSSの後に読み込まれるが、deferやasync属性を使用することで読み込みの順序を変更できる。
+
+## ⑤ HTMLの タグ ・ 要素 ・ 属性 とは何か
+
+* タグ：HTML文書内で要素を定義するために使用されるマークアップ（Webサイトのテキストに目印付けを行い、コンピューターに認識させる）の記号のこと。タグは通常「<（開始タグ）」と「>（終了タグ）」で囲むことで、要素の始まりと終わりを示す。
+* 要素：開始タグ、終了タグ、およびその間に含まれるコンテンツで構成される。  
+  例：`<p>Hello, World!</p>`  
+  `<p>`は段落の開始タグ、`</p>`は段落の終了タグ、コンテンツは "Hello, World!"をそれぞれ表している。
+* 属性：HTML要素に付加され、要素に関する追加情報や設定を示す。要素の開始タグ内に配置される。  
+  例：`<a href="https://example.com">Link</a>`  
+  `href`はアンカータグ（リンクを作成するために使用されるタグのこと）`<a>`の属性で、リンク先のURLを指定している。
+
+## ⑥ HTMLの属性のうち class属性 と id属性 の違いは何か
+
+* class属性：種別名を割り当て、１ページ中に繰り返し使える。
+* id属性；固有の名前を割り当て、１ページ中に１度しか使えない。
