--- a/インプット課題/01-1.md
+++ b/インプット課題/01-1.md
@@ -1,4 +1,4 @@
-## ① IDEとは何か。
+## ① IDEとは何か
 
 Integrated Development Environment（統合開発環境）の略称。  
 プログラム開発を行う上で必要な機能を詰め込んだツールのこと。  
@@ -14,15 +14,15 @@ Integrated Development Environment（統合開発環境）の略称。
 
 一般的なIDEには、Visual Studio、Eclipse、IntelliJ IDEA、Visual Studio Codeなどがある。
 
-## ② Visual Studio Code（VSCode） とは何か。
+## ② Visual Studio Code（VSCode） とは何か
 
 Microsoftが開発した無料でオープンソースのテキストエディタおよびIDEのこと。
 
-## ③ GitHub とは何か。
+## ③ GitHub とは何か
 
 ソフトウェア開発者やプロジェクトチームがコードを共有・改良するなどの、バージョン管理や協力開発を行うためのウェブプラットフォームのこと。
 
-## ④ AWSとは何か。
+## ④ AWSとは何か
 
 「Amazon Web Services」の略称で、Amazon.comが提供するクラウドコンピューティングプラットフォームのこと。  
 オンデマンドでインフラストラクチャーやサービスを提供している。  
@@ -50,7 +50,7 @@ AWSの主な特徴は下記の通り。
   * 従量課金制であるため、正確な料金の見積もりが難しい
   * 継続的な情報収集が必要である
 
-## ⑤ AWSにおける アカウント と ユーザー の違いは何か。
+## ⑤ AWSにおける アカウント と ユーザー の違いは何か
 
 * アカウント → 「rootユーザー」  
   * 最初にサインアップしたときに作成されるアカウントのこと。
@@ -63,7 +63,7 @@ AWSの主な特徴は下記の通り。
   * AWSアカウント（rootユーザー）ではなく、IAMユーザーにより業務や管理を行うことが推奨される。
   * 作成直後は何も権限が与えられていない。
 
-## ⑥ AWSアカウントにおける rootユーザー と IAMユーザー の違いは何か。
+## ⑥ AWSアカウントにおける rootユーザー と IAMユーザー の違いは何か
 
 rootユーザーは、AWSアカウント全体に対する最高権限を持つアカウント所有者であり、通常は緊急時のアクセスに使用される。  
 一方で、IAMユーザーはより細かい権限の制御ができるため、セキュアなアクセス管理を可能となる。  
