--- a/インプット課題/03-1.md
+++ b/インプット課題/03-1.md
@@ -3,18 +3,33 @@
 ## ② オンプレ・クラウドとは何か。また、その２つの違いは。
 
 ## ③ 3大クラウドと言われるAWS・GCP・Azureの違いは。
-OSとは何か。
-OSの種類であるWindows・Linuxについて、それぞれの特徴は。
-Amazon Linux 2とはどのようなものか。
-AWS Cloud9 とはどのようなサービスか。
-GUI・CUIとは何か。また、その２つの違いは。
-Linuxコマンドとは何か。
-以下の各処理を行う Linuxコマンド何か。
-現在のディレクトリパスを調べる
-ディレクトリ(*2)を作成する
-別のディレクトリに移動する
-ディレクトリ配下を確認する
-ファイルを作成する
-ファイルやディレクトリをコピーする
-ファイルやディレクトリを削除する
-スーパーユーザー権限でコマンドを実行する
+
+## ④ OSとは何か。
+
+## ⑤ OSの種類であるWindows・Linuxについて、それぞれの特徴は。
+
+## ⑥ Amazon Linux 2とはどのようなものか。
+
+## ⑦ AWS Cloud9 とはどのようなサービスか。
+
+## ⑧ GUI・CUIとは何か。また、その２つの違いは。
+
+## ⑨ Linuxコマンドとは何か。
+
+## ⑩ 以下の各処理を行う Linuxコマンド何か。
+
+### 1. 現在のディレクトリパスを調べる
+
+### 2. ディレクトリ(*2)を作成する
+
+### 3. 別のディレクトリに移動する
+
+### 4. ディレクトリ配下を確認する
+
+### 5. ファイルを作成する
+
+### 6. ファイルやディレクトリをコピーする
+
+### 7. ファイルやディレクトリを削除する
+
+### 8. スーパーユーザー権限でコマンドを実行する
