--- a/インプット課題/03-1.md
+++ b/インプット課題/03-1.md
@@ -1,7 +1,10 @@
 ## ① 汎用PCとサーバーの違いは何か。
 * 用途や目的  
   * 汎用PC：主に個人が利用する目的で使用される。ソフトウェアを導入することで、計算処理、インターネットの閲覧、メディア再生などの様々な用途に利用できる。
-  * サーバー：ネットワーク上で他のコンピュータやクライアントに対してサービスを提供するために設計されてい
+  * サーバー：ネットワーク上で、他のコンピュータやクライアントに対してサービスを提供するために設計されている。
+* 仕様
+  * 汎用PC：
+  * サーバー：
 
 ## ② オンプレ・クラウドとは何か。また、その２つの違いは。
 
