--- a/インプット課題/03-1.md
+++ b/インプット課題/03-1.md
@@ -1,10 +1,14 @@
-## ① 汎用PCとサーバーの違いは何か。
-* 用途や目的  
+## ① 汎用PCとサーバーの違いは何か
+
+* 用途や目的
   * 汎用PC：主に個人が利用する目的で使用される。ソフトウェアを導入することで、計算処理、インターネットの閲覧、メディア再生などの様々な用途に利用できる。
   * サーバー：ネットワーク上で、他のコンピュータやクライアントに対してサービスを提供するために設計されている。
 * 仕様
   * 汎用PC：デスクトップやラップトップの形態をしている。ユーザーの使用目的に応じて、CPU、RAM、ストレージなどがバランスよく組み合わされている。
   * サーバー：高い処理能力、大容量のRAM、拡張性があり、冗長性を持つことが求められる。また、複数のディスクや冗長電源など、信頼性を重視した仕様となっている。
+* OS
+  * 汎用PC：Windows、macOS、Linuxなどの一般的なオペレーティングシステム。
+  * サーバー：LinuxやWindows Serverなどの、サーバー用途に特化したオペレーティングシステム。
 
 ## ② オンプレ・クラウドとは何か。また、その２つの違いは。
 
