--- a/インプット課題/03-1.md
+++ b/インプット課題/03-1.md
@@ -1,4 +1,4 @@
-## ① 汎用PCとサーバーの違いは何か
+## ① 汎用PCとサーバーの違いは何か。
 
 * 汎用PC
   * 用途や目的：主に個人が利用する目的で使用される。ソフトウェアを導入することで、計算処理、インターネットの閲覧、メディア再生などの様々な用途に利用できる。
@@ -11,20 +11,20 @@
 
 ## ② オンプレ・クラウドとは何か。また、その２つの違いは。
 
-* オンプレ：自社内に情報システムを保有し、そこでサーバーを運用する形態のこと。
-  * 導入コスト
-  * 導入期間
-  * カスタマイズ性
-  * 拡張性
-  * 外部アクセス
-  * セキュリティや障害対応
-* クラウド：情報システムを自社で保有せずに、外部で運用する形態のこと。
-  * 導入コスト
-  * 導入期間
-  * カスタマイズ性
-  * 拡張性
-  * 外部アクセス
-  * セキュリティや障害対応
+* オンプレ：ソフトウェア・ハードウェアを自社で保有・管理したうえで、システムを自社で構築する運用方法で、「自社運用」とも呼ばれる。2000年代半ば頃までは、オンプレが主流だった。
+  * 導入コスト：初期投資が大きいことがあるが、最適なサーバーを選べば長期間の利用によるコストダウンができる場合もあり。
+  * 導入期間：機器選定から機器調達まで一ヵ月以上かかってしまうことがある。
+  * カスタマイズ性：プロジェクトに合わせて環境を柔軟にカスタマイズできる。
+  * 拡張性：拡張が必要となる都度、初期費用が発生する。
+  * 外部アクセス：ローカル回線を利用する社内に設置されているため、速度は比較的速い。
+  * セキュリティや障害対応：ローカル環境にシステムの構築・運用するためセキュリティ面は比較的安全。しかし、ハードウェア自体に障害が起きてしまったら、社内の運用管理者が自身で復旧を行う必要があり、多くのリソースが必要となる。
+* クラウド：「雲」を意味する「クラウド」は、インターネットを介してサーバーやストレージ、データベース、ソフトウェアといったITサービスを利用する利用形態のこと。2010年代になると、徐々にオンプレからクラウドに移行する動きが大きくなり、企業だけでなく個人にとっても必要不可欠な存在となっている。
+  * 導入コスト：基本的に初期費用が必要なく、コストを最小限に抑えて導入することが可能。
+  * 導入期間：既存のシステムを利用するので、申し込みからサーバーの立ち上げまで、数分ほどあれば利用可能。
+  * カスタマイズ性：ネットワーク機器やサーバー機器・OSなどは既存のものを使うためカスタマイズが限られる。
+  * 拡張性：プロジェクトに合わせてその都度拡張が可能。
+  * 外部アクセス：ネットワークを介してリモート環境にあるサーバーへアクセスする形態をとるので、オンプレに比べると速度は劣る。
+  * セキュリティや障害対応：データの送受信がどうしてもインターネットを経由するため、セキュリティ面においてのリスクはあるが、障害発生時はサービス提供元が障害対応を行ってくれる。
 
 ## ③ 3大クラウドと言われるAWS・GCP・Azureの違いは。
 
