--- a/インプット課題/03-1.md
+++ b/インプット課題/03-1.md
@@ -28,6 +28,19 @@
 
 ## ③ 3大クラウドと言われるAWS・GCP・Azureの違いは。
 
+* AWS
+  * 提供元
+  * 特徴
+  * 人気サービス
+* GCP
+  * 提供元
+  * 特徴
+  * 人気サービス
+* Azure
+  * 提供元
+  * 特徴
+  * 人気サービス
+
 ## ④ OSとは何か。
 
 ## ⑤ OSの種類であるWindows・Linuxについて、それぞれの特徴は。
