--- a/インプット課題/03-1.md
+++ b/インプット課題/03-1.md
@@ -29,17 +29,17 @@
 ## ③ 3大クラウドと言われるAWS・GCP・Azureの違いは。
 
 * AWS
-  * 提供元
-  * 特徴
-  * 人気サービス
+  * 提供元：Amazon
+  * 特徴：世界でトップシェアを誇るクラウドサービスであり、拡張性、多様なサービスの提供、高い可用性と信頼性が挙げられる。ユーザの増加によるサーバの拡大などに対して、ワンクリックでリソースを拡大できる他、顧客側のリクエストに応える形で多くのサービスを提供しているため、企業やユーザのさまざまな用途に対応することができる。データセンターは世界中に分散されており、日本語によるサポートも24時間、365日受けることができる。
+  * 人気サービス：Amazon EC2, Amazon S3, AWS Lambda
 * GCP
-  * 提供元
-  * 特徴
-  * 人気サービス
+  * 提供元：Google
+  * 特徴：ビッグデータの処理やAI（人工知能）、機械学習の開発に優れたサービスに強みを持っており、Googleが運営しているため、Google社内で利用されているインフラ環境・技術も利用できる。
+  * 人気サービス：Google Compute Engine, Google Cloud Storage, Google Cloud SQL
 * Azure
-  * 提供元
-  * 特徴
-  * 人気サービス
+  * 提供元：Microsoft
+  * 特徴：Microsoft製品との相性がよく、さまざまなアプリケーションやサービスとの連携や移行が可能。例えば、Office365やSharePointと組み合わせて利用したり、SQL ServerやOracleなどのデータベースサービスも利用でき、自社の状況に合わせた使い方ができる。また、Azureはオンプレミス環境とクラウド環境の両方に対応しており、企業の独自の環境に合わせた運用も可能である。情報セキュリティに関する国際的な規格やガイドラインにも準拠しており、高いセキュリティ機能を備えている。
+  * 人気サービス：Azure Virtual Machines, Azure App Service, Azure Cosmos DB
 
 ## ④ OSとは何か。
 
