--- a/インプット課題/03-1.md
+++ b/インプット課題/03-1.md
@@ -43,6 +43,15 @@
 
 ## ④ OSとは何か。
 
+オペレーティングシステムの略称で、機器の基本的な管理や制御のための機能や、多くのソフトウェアが共通して利用する基本的な機能などを実装した、システム全体を管理するソフトウェアのこと。  
+パソコンではWindows・macOS・Linux、スマートフォンではAndroid、iOSなどがある。  
+* 役割
+  * タスク管理：アプリの実行や、キーボードやマウスからの入力処理などのタスクを行う順番を決め、必要なメモリやCPUを割り当てる。
+  * メモリ管理：タスクにメモリを割り当てるほか、タスクが終わった後のメモリの開放も行う。
+  * ファイル管理：ファイルの作成・編集・削除、保存、検索などの操作を効果的に管理・制御する。
+  * デバイス管理：コンピューターシステムに接続されたハードウェアデバイス（入出力装置や周辺機器など）を制御する。
+  * APIの提供：API（アプリケーション(ソフトウェア)を作るときに利用できる機能と方法をまとめたもの）を提供する。
+
 ## ⑤ OSの種類であるWindows・Linuxについて、それぞれの特徴は。
 
 ## ⑥ Amazon Linux 2とはどのようなものか。
