--- a/インプット課題/03-1.md
+++ b/インプット課題/03-1.md
@@ -45,16 +45,27 @@
 
 オペレーティングシステムの略称で、機器の基本的な管理や制御のための機能や、多くのソフトウェアが共通して利用する基本的な機能などを実装した、システム全体を管理するソフトウェアのこと。  
 パソコンではWindows・macOS・Linux、スマートフォンではAndroid、iOSなどがある。  
-* 役割
-  * タスク管理：アプリの実行や、キーボードやマウスからの入力処理などのタスクを行う順番を決め、必要なメモリやCPUを割り当てる。
-  * メモリ管理：タスクにメモリを割り当てるほか、タスクが終わった後のメモリの開放も行う。
-  * ファイル管理：ファイルの作成・編集・削除、保存、検索などの操作を効果的に管理・制御する。
-  * デバイス管理：コンピューターシステムに接続されたハードウェアデバイス（入出力装置や周辺機器など）を制御する。
-  * APIの提供：API（アプリケーション(ソフトウェア)を作るときに利用できる機能と方法をまとめたもの）を提供する。
+タスク管理・メモリ管理・ファイル管理・デバイス管理・APIの提供などの役割を担っている。
 
 ## ⑤ OSの種類であるWindows・Linuxについて、それぞれの特徴は。
 
+一般的に、Windowsはデスクトップ環境や商用アプリケーション向けに利用され、Linuxはサーバーや開発者、組み込みシステム、クラウド環境などで幅広い用途に使われている。  
+* Windows
+  * ユーザーインターフェース：直感的で視覚的なユーザーインターフェースを提供しており、デフォルトではWindowsデスクトップ環境となっている。
+  * 商用ソフトウェア：多くの商用ソフトウェアやアプリケーションが動作するプラットフォームとして一般的である。
+  * ゲーム：多くのゲームが開発・サポートされている主要なゲームプラットフォームとして知られている。
+  * サポート：多くのユーザーがWindowsを利用しているため、強力なサポート体制が提供されている。
+  * ドライバーサポート：多くのハードウェアメーカーやデバイスに対応している。
+* Linux
+  * オープンソース：ソースコードが公開されており、ユーザーは自由にソースコードを閲覧、変更、配布できる。
+  * 多様性：さまざまなディストリビューションが存在し、ユーザーは好みや用途に合わせて選択できる。
+  * コマンドライン：CLI（コマンドラインインターフェース）を提供しており、システム管理や開発者がコマンドを使って操作することで、柔軟な処理が行える。
+  * 安定性とセキュリティ：高い安定性とセキュリティにより、サーバー環境やエンタープライズ環境で頻繁に使用される。また、セキュリティの更新が頻繁に行われており、オープンソース性によりセキュリティの監査が可能。
+  * パフォーマンス：リソースを効率的に使用できる軽量なディストリビューションは、サーバーや組み込みシステム、クラウド環境などで高いパフォーマンスが求められる場面で利用されている。
+
 ## ⑥ Amazon Linux 2とはどのようなものか。
+
+AWSが提供するAWS向けのLinuxディストリビューションのこと。Amazon Linux AMI (Amazon Machine Image) の後継バージョンとして開発され、Amazon EC2（Elastic Compute Cloud）などのAWS上で仮想マシンを実行する際に利用される。
 
 ## ⑦ AWS Cloud9 とはどのようなサービスか。
 
