--- a/インプット課題/03-1.md
+++ b/インプット課題/03-1.md
@@ -69,6 +69,8 @@ AWSが提供するAWS向けのLinuxディストリビューションのこと。
 
 ## ⑦ AWS Cloud9 とはどのようなサービスか。
 
+AWSが提供するオンラインの統合開発環境（IDE）サービスのこと。アプリケーション開発にとって必要なツールや機能を全て兼ね備えているため、開発者はウェブブラウザにアクセスするだけでソフトウェアの開発を行える。
+
 ## ⑧ GUI・CUIとは何か。また、その２つの違いは。
 
 ## ⑨ Linuxコマンドとは何か。
