--- a/インプット課題/03-1.md
+++ b/インプット課題/03-1.md
@@ -90,16 +90,32 @@ Linuxオペレーティングシステムで使用されるコマンドライン
 
 ### 1. 現在のディレクトリパスを調べる
 
+`pwd`
+
 ### 2. ディレクトリを作成する
+
+`mkdir`
 
 ### 3. 別のディレクトリに移動する
 
+`cd`
+
 ### 4. ディレクトリ配下を確認する
+
+`ls`
 
 ### 5. ファイルを作成する
 
+`touch`
+
 ### 6. ファイルやディレクトリをコピーする
+
+`cp`
 
 ### 7. ファイルやディレクトリを削除する
 
+`rm`
+
 ### 8. スーパーユーザー権限でコマンドを実行する
+
+`sudo`
