--- a/インプット課題/03-2.md
+++ b/インプット課題/03-2.md
@@ -1,15 +1,33 @@
 ## ① Linuxにおける パッケージ とは何か。
 
+実行プログラム、設定ファイル、ライブラリ、マニュアルなどを1つのファイルにまとめたもの。これにより、ソフトウェアやアプリケーションを容易にインストール、管理、アップグレードできる。
+
 ## ② レポジトリとは何を管理するものか？
 
+ソフトウェアパッケージなどを集めたデータベースのことで、Linuxディストリビューションにおいて、ソフトウェアのインストールやアップデート、および管理を容易にするために使用される。
+
 ## ③ yum コマンドは何を行うコマンドか。
+
+Red Hat系やCentOSなどのLinuxディストリビューションで使われているRPM（Red Hat Package Manager）パッケージを扱うためのパッケージ管理コマンドのこと。
 
 ## ④ yum コマンドで以下を行う場合の実行コマンドはどのようになるか。
 
 ### 1. インストール可能パッケージの確認
+
+`sudo yum list available`
+
 ### 2. インストール済パッケージの確認
+
+`sudo yum list installed`
+
 ### 3. パッケージインストール
+
+`sudo yum install "パッケージの名前"`
+
 ### 4. パッケージアップデート
+
+`sudo yum update` ← すべてのインストール済パッケージを最新にアップデート  
+`sudo yum update "パッケージの名前"` ← 特定のパッケージを最新にアップデート
 
 ## ⑤ yum コマンドで -y オプションをつけるとどのような動作になるか。
 また、このオプションをつける際の注意点は。
