--- a/output/03-2/03-2_1.md
+++ b/output/03-2/03-2_1.md
@@ -1,4 +1,5 @@
-NAME="Amazon Linux"   _OSの名前_  
+```
+NAME="Amazon Linux"   //OSの名前
 VERSION="2"   _OSのバージョン_  
 ID="amzn"   _OSのID_  
 ID_LIKE="centos rhel fedora"   _CentOS、RHEL、Fedoraに似ている_  
@@ -7,4 +8,5 @@ PRETTY_NAME="Amazon Linux 2"   _人が読みやすい形式で "Amazon Linux 2" 
 ANSI_COLOR="0;33"   _ANSI色設定での表示に使用されるカラーコード_  
 CPE_NAME="cpe:2.3:o:amazon:amazon_linux:2"   _セキュリティ標準で使用される形式_  
 HOME_URL="https://amazonlinux.com/"   _OSの公式ホームページのURL_  
-SUPPORT_END="2025-06-30"   _サポートが終了する日付_
+SUPPORT_END="2025-06-30"   _サポートが終了する日付
+```
