--- a/input/04-1.md
+++ b/input/04-1.md
@@ -1,6 +1,17 @@
 ## ① PHPとはどのようなプログラミング言語か。（特徴・シェア・どのような開発に向いているかなど。）
 
+ウェブ開発に使用されるサーバーサイドのプログラミング言語のこと。特徴は下記の通り。
+* 構文がシンプルで記述・実行しやすい
+* プログラムの実行前に変換作業が不要
+* プログラムの記述量が少ない
+* HTMLと組み合わせて使用できる
+* さまざまなOS・Webサーバーで実行できる
+* フレームワーク・ライブラリが豊富
+* 全ウェブサイトの約８割がPHPで作成されている
+
 ## ② PHPファイルの拡張子は何か？
+
+「.php」
 
 ## ③ コメント（一行コメント・ブロックコメント）の書き方。
 
