--- a/input/04-1.md
+++ b/input/04-1.md
@@ -15,6 +15,18 @@
 
 ## ③ コメント（一行コメント・ブロックコメント）の書き方。
 
+一行コメントは、行の先頭に「//」または「#」を使用する。  
+`// これは一行コメントです。`    
+`# これも一行コメントです。`  
+ブロックコメントは「/\*」と「*/」で囲む。  
+```
+/*
+これは
+複数行の
+コメントです。
+```
+
+
 ## ④ PHPの以下の基本文法について調べ、自分なりにまとめてみましょう。
 
 ### 1. 変数・定数
