--- a/input/04-1.md
+++ b/input/04-1.md
@@ -31,6 +31,20 @@
 ## ④ PHPの以下の基本文法について調べ、自分なりにまとめてみましょう。
 
 ### 1. 変数・定数
+
+* 変数：一時的にデータの「値」を格納し、計算結果などによってその値の内容が変化する箱のこと。名前の先頭に「$」を付ける。
+  ```
+  $number = 42;           // 整数
+  $floatNumber = 3.14;    // 浮動小数点数
+  $string = "Hello";      // 文字列
+  $isTrue = true;          // 真偽値
+  ```
+* 定数：一度「値」が格納されたら変化しない箱のこと。「define()関数」を使用して定義する。
+  ```
+  define("PI", 3.14);       // PIという名前で3.14という値を定義  
+  define("GREETING", "Hello, World!");  // GREETINGという名前でHello, World!という値を定義
+  ```
+
 ### 2. 配列・連想配列
 ### 3. 演算子
 ### 4. 制御文（条件分岐・繰り返し）
