--- a/input/04-1.md
+++ b/input/04-1.md
@@ -39,7 +39,7 @@
   $string = "Hello";      // 文字列
   $isTrue = true;          // 真偽値
   ```
-* 定数：一度「値」が格納されたら変化しない箱のこと。「define()関数」を使用して定義する。
+* 定数：一度「値」が格納されたら変化しない箱のこと。「define（）関数」を使用して定義する。
   ```
   define("PI", 3.14);       // PIという名前で3.14という値を定義  
   define("GREETING", "Hello, World!");  // GREETINGという名前でHello, World!という値を定義
