--- a/input/04-1.md
+++ b/input/04-1.md
@@ -46,6 +46,32 @@
   ```
 
 ### 2. 配列・連想配列
+
+１つの変数に複数の値（インデックス）を持たせることを配列と呼ぶ。
+```
+// 通常は「array」を使う
+$numbers = array(10, 20, 30, 40, 50);
+
+// PHP 5.4以降では、短縮構文が利用可能
+$numbers = [10, 20, 30, 40, 50];
+```
+また、要素を数字（キー）ではなく任意の文字列で指定することを連想配列と呼ぶ。
+```
+// キーと値を「=>」で紐づける
+$person = array(
+    "name" => "John",
+    "age" => 30,
+    "city" => "New York"
+);
+
+// PHP 5.4以降では、短縮構文が利用可能
+$person = [
+    "name" => "John",
+    "age" => 30,
+    "city" => "New York"
+];
+```
+
 ### 3. 演算子
 ### 4. 制御文（条件分岐・繰り返し）
 ### 5. 関数・引数・戻り値
