--- a/input/04-1.md
+++ b/input/04-1.md
@@ -47,32 +47,68 @@
 
 ### 2. 配列・連想配列
 
-１つの変数に複数の値（インデックス）を持たせることを配列と呼ぶ。
-```
-// 通常は「array」を使う
-$numbers = array(10, 20, 30, 40, 50);
-
-// PHP 5.4以降では、短縮構文が利用可能
-$numbers = [10, 20, 30, 40, 50];
-```
-また、要素を数字（キー）ではなく任意の文字列で指定することを連想配列と呼ぶ。
-```
-// キーと値を「=>」で紐づける
-$person = array(
-    "name" => "John",
-    "age" => 30,
-    "city" => "New York"
-);
-
-// PHP 5.4以降では、短縮構文が利用可能
-$person = [
-    "name" => "John",
-    "age" => 30,
-    "city" => "New York"
-];
-```
+* 配列：１つの変数に複数の値（インデックス）を持たせること。
+  ```
+  // 通常は「array」を使う
+  $numbers = array(10, 20, 30, 40, 50);
+  
+  // PHP 5.4以降では、短縮構文が利用可能
+  $numbers = [10, 20, 30, 40, 50];
+  ```
+* 連想配列：要素を数字（キー）ではなく任意の文字列で指定すること。
+  ```
+  // キーと値を「=>」で紐づける
+  $person = array(
+      "name" => "John",
+      "age" => 30,
+      "city" => "New York"
+  );
+  
+  // PHP 5.4以降では、短縮構文が利用可能
+  $person = [
+      "name" => "John",
+      "age" => 30,
+      "city" => "New York"
+  ];
+  ```
 
 ### 3. 演算子
+
+* 算術演算子：四則演算に使われる。
+  ```
+  $a = 10;
+  $b = 3;
+
+  echo $a + $b; // 13
+  echo $a - $b; // 7
+  echo $a * $b; // 30
+  echo $a / $b; // 3.333...
+  echo $a % $b; // 1（割り算の余り）
+  ```
+* 比較演算子：値や式の比較に使われる。
+  ```
+  $a = 10;
+  $b = 5;
+
+  echo $a == $b;  // false（値が等しい）
+  echo $a === $b; // false（値とデータ型が共に等しい）
+  echo $a != $b;  // true
+  echo $a !== $b; // true
+  echo $a > $b;   // true
+  echo $a < $b;   // false
+  echo $a >= $b;  // true
+  echo $a <= $b;  // false
+  ```
+* 論理演算子：真偽値の論理演算に使われる。
+  ```
+  $condition1 = true;
+  $condition2 = false;
+
+  echo $condition1 && $condition2; // false（かつ）
+  echo $condition1 || $condition2; // true（または）
+  echo !$condition1;               // false（否定）
+  ```
+
 ### 4. 制御文（条件分岐・繰り返し）
 ### 5. 関数・引数・戻り値
 ### 6. クラスとインスタンス
