--- a/input/04-1.md
+++ b/input/04-1.md
@@ -110,5 +110,21 @@
   ```
 
 ### 4. 制御文（条件分岐・繰り返し）
+
+* 条件分岐
+  ```
+  if ($score >= 60) {
+    echo "合格";
+  } else {
+    echo "不合格";
+  }
+  ```
+* 繰り返し
+  ```
+  for ($i = 0; $i < 5; $i++) {
+    echo $i;
+  }
+  ```
+
 ### 5. 関数・引数・戻り値
 ### 6. クラスとインスタンス
