--- a/input/04-1.md
+++ b/input/04-1.md
@@ -127,4 +127,12 @@
   ```
 
 ### 5. 関数・引数・戻り値
+
+```
+function greet($name) {
+    return "Hello, $name!";
+}
+```
+上記を例にすると、「function」で関数を定義し、「$name」が関数に渡す値（引数）、「"Hello, $name!"」が関数が返す値（戻り値）をそれぞれ表す。
+
 ### 6. クラスとインスタンス
