--- a/input/04-1.md
+++ b/input/04-1.md
@@ -136,3 +136,29 @@ function greet($name) {
 上記を例にすると、「function」で関数を定義し、「$name」が関数に渡す値（引数）、「"Hello, $name!"」が関数が返す値（戻り値）をそれぞれ表す。
 
 ### 6. クラスとインスタンス
+
+* クラス：プログラムの処理をまとめたオブジェクト（変数と、その変数を操作する関数がまとまった設計図のようなもの）のこと。
+  ```
+  class Car {
+    // プロパティ（オブジェクトが持つ変数）
+    public $brand;
+    public $color;
+
+    // メソッド（プロパティを処理する関数）
+    public function startEngine() {
+        echo "Engine started!";
+    }
+  }
+  ```
+* インスタンス：クラスという設計図を元に作られた、実際に使用できるプログラムのこと。
+  ```
+  // 上記コードを基に、Carクラスからインスタンスを生成
+  $myCar = new Car();
+  
+  // プロパティに値を設定
+  $myCar->brand = "Toyota";
+  $myCar->color = "Blue";
+
+  // メソッドを呼び出し
+  $myCar->startEngine();
+  ```
