--- a/input/05-1.md
+++ b/input/05-1.md
@@ -1,10 +1,10 @@
 ## ① フレームワーク・ライブラリとは何か。また2つの違いは何か。
-PHPのフレームワークで有名なLaravel・CakePHP・Symfonyについて、それぞれの特徴は。
-Laravelの環境構築時に使用するComposerとは何か。
-Composerコマンドを実行する際に作成・参照されるcomposer.jsonファイル・composer.lockファイルとはどのようなものか。
-Composerコマンドで以下を行う場合の実行コマンドはどのようになるか。
-composer.jsonファイルの新規作成
-composer.jsonファイルへのインストール対象ライブラリ情報追加
-composer.jsonファイルに定義されているライブラリのインストール実行
-インストール済みライブラリのアップデート実行
-Laravel環境構築後に様々な場面で使用することになるartisanコマンドとはどのようなものか。
+## ② PHPのフレームワークで有名なLaravel・CakePHP・Symfonyについて、それぞれの特徴は。
+## ③ Laravelの環境構築時に使用するComposerとは何か。
+## ④ Composerコマンドを実行する際に作成・参照されるcomposer.jsonファイル・composer.lockファイルとはどのようなものか。
+## ⑤ Composerコマンドで以下を行う場合の実行コマンドはどのようになるか。
+### 1. composer.jsonファイルの新規作成
+### 2. composer.jsonファイルへのインストール対象ライブラリ情報追加
+### 3. composer.jsonファイルに定義されているライブラリのインストール実行
+### 4. インストール済みライブラリのアップデート実行
+## ⑥ Laravel環境構築後に様々な場面で使用することになるartisanコマンドとはどのようなものか。
