--- a/input/05-1.md
+++ b/input/05-1.md
@@ -1,4 +1,17 @@
 ## ① フレームワーク・ライブラリとは何か。また2つの違いは何か。
+
+* フレームワーク
+  * 定義：Webアプリケーションを開発する際に、それぞれの機能ごとにテンプレートが用意されている開発ツールのこと。
+  * 使用目的：。
+  * 例：Ruby on Rails、Django、Laravel
+* ライブラリ
+  * 定義；Webアプリケーション開発する際に、簡単に活用できるコードが集合したもの。
+  * 使用目的：部分的に機能を追加・修正したい時。
+  * 例：NumPy、jQuery
+* 【両者の違い】
+  * 自由度：フレームワークはテンプレートに沿って開発するため自由度は低め、ライブラリは使うコードの選択肢や挿入する場所などを開発者が全て決めるため自由度は高め。
+  * 役割：フレームワークはアプリを一から開発したい時の骨組みを丸ごと提供してくれる一方、ライブラリは開発者が必要に応じて特定の機能を取捨選択していく。
+
 ## ② PHPのフレームワークで有名なLaravel・CakePHP・Symfonyについて、それぞれの特徴は。
 ## ③ Laravelの環境構築時に使用するComposerとは何か。
 ## ④ Composerコマンドを実行する際に作成・参照されるcomposer.jsonファイル・composer.lockファイルとはどのようなものか。
