--- a/input/05-1.md
+++ b/input/05-1.md
@@ -13,6 +13,23 @@
   * 役割：フレームワークはアプリを一から開発したい時の骨組みを丸ごと提供してくれる一方、ライブラリは開発者が必要に応じて特定の機能を取捨選択していく。
 
 ## ② PHPのフレームワークで有名なLaravel・CakePHP・Symfonyについて、それぞれの特徴は。
+
+* Laravel
+  * 最も人気がある
+  * ドキュメントが豊富
+  * データベースとの連携が簡単
+  * コード生成が簡単
+* CakePHP
+  * シンプルな構造
+  * コード生成が簡単
+  * 拡張性が高い
+  * ドキュメントが不足している
+* Symfony
+  * 拡張性が高い
+  * テンプレートエンジンが採用されている
+  * メンテナンス性が高い
+  * 設定が複雑
+
 ## ③ Laravelの環境構築時に使用するComposerとは何か。
 ## ④ Composerコマンドを実行する際に作成・参照されるcomposer.jsonファイル・composer.lockファイルとはどのようなものか。
 ## ⑤ Composerコマンドで以下を行う場合の実行コマンドはどのようになるか。
