--- a/input/05-1.md
+++ b/input/05-1.md
@@ -31,6 +31,9 @@
   * 設定が複雑
 
 ## ③ Laravelの環境構築時に使用するComposerとは何か。
+
+PHPの依存関係を管理するツールのこと。開発の際に使用される外部ライブラリやパッケージの取得、管理、自動ロードを行う。
+
 ## ④ Composerコマンドを実行する際に作成・参照されるcomposer.jsonファイル・composer.lockファイルとはどのようなものか。
 ## ⑤ Composerコマンドで以下を行う場合の実行コマンドはどのようになるか。
 ### 1. composer.jsonファイルの新規作成
