--- a/input/05-1.md
+++ b/input/05-1.md
@@ -35,6 +35,10 @@
 PHPの依存関係を管理するツールのこと。開発の際に使用される外部ライブラリやパッケージの取得、管理、自動ロードを行う。
 
 ## ④ Composerコマンドを実行する際に作成・参照されるcomposer.jsonファイル・composer.lockファイルとはどのようなものか。
+
+* composer.json：「composer install」を実行する際に参照されるファイルのこと。このファイルを基にパッケージのダウンロードを行う。プロジェクトの名前、バージョン、必要なパッケージ、スクリプト、オートローディングの設定などが含まれる。必要に応じて書き換えを行う。
+* composer.lock：composer.jsonを参照してインストールした結果、判明した依存関係やバージョン制約の情報が記載されたファイルのこと。インストール実行時に自動で生成される。チーム内で共有することで、同じバージョンのもとで管理ができる。
+
 ## ⑤ Composerコマンドで以下を行う場合の実行コマンドはどのようになるか。
 ### 1. composer.jsonファイルの新規作成
 ### 2. composer.jsonファイルへのインストール対象ライブラリ情報追加
