--- a/input/05-1.md
+++ b/input/05-1.md
@@ -8,7 +8,7 @@
   * 定義；Webアプリケーション開発する際に、簡単に活用できるコードが集合したもの。
   * 使用目的：部分的に機能を追加・修正したい時。
   * 例：NumPy、jQuery
-* 【両者の違い】
+* 両者の違い
   * 自由度：フレームワークはテンプレートに沿って開発するため自由度は低め、ライブラリは使うコードの選択肢や挿入する場所などを開発者が全て決めるため自由度は高め。
   * 役割：フレームワークはアプリを一から開発したい時の骨組みを丸ごと提供してくれる一方、ライブラリは開発者が必要に応じて特定の機能を取捨選択していく。
 
