--- a/input/06-1.md
+++ b/input/06-1.md
@@ -1,4 +1,4 @@
-DB（データベース）とは何か。また、どのような用途で使われるものか。
+## ① DB（データベース）とは何か。また、どのような用途で使われるものか。
 RDBMSとは何か。
 RDBMSとして有名なOracle・MySQL・PostgreSQL・SQL Serverについて、それぞれの特徴は何か。
 MySQLの派生となるMariaDBとは何か。
