--- a/input/06-1.md
+++ b/input/06-1.md
@@ -1,18 +1,38 @@
 ## ① DB（データベース）とは何か。また、どのような用途で使われるものか。
-RDBMSとは何か。
-RDBMSとして有名なOracle・MySQL・PostgreSQL・SQL Serverについて、それぞれの特徴は何か。
-MySQLの派生となるMariaDBとは何か。
-DBにおける、DBサーバーとDBクライアントの役割と関係性は？
-mysqlコマンド
-DBクライアントであるmysqlコマンドについて、以下の形でDBに接続する時のコマンド書式はどのようになるか。
-ユーザーを指定して接続
-ユーザーのパスワード認証で接続
-使用するDBを指定して接続
-mysqlコマンドでDB接続に成功すると起動するDB操作用ターミナルにて以下の操作を行う時のコマンドは何か。
-存在しているデータベースの一覧表示
-存在しているテーブルの一覧表示
-データベースの切り替え
-ターミナルの終了
-文字コード
-文字コードとは何か。
-文字コードのASCII・Shift-JIS・EUC-JP・UTF-8について、それぞれの特徴は何か。
+
+
+
+## ② RDBMSとは何か。
+
+
+
+## ③ RDBMSとして有名なOracle・MySQL・PostgreSQL・SQL Serverについて、それぞれの特徴は何か。
+
+
+
+## ④ MySQLの派生となるMariaDBとは何か。
+
+
+
+## ⑤ DBにおける、DBサーバーとDBクライアントの役割と関係性は？
+
+
+
+## ⑥ DBクライアントであるmysqlコマンドについて、以下の形でDBに接続する時のコマンド書式はどのようになるか。
+
+### 1. ユーザーを指定して接続
+### 2. ユーザーのパスワード認証で接続
+### 3. 使用するDBを指定して接続
+
+## ⑦ mysqlコマンドでDB接続に成功すると起動するDB操作用ターミナルにて以下の操作を行う時のコマンドは何か。
+
+### 1. 存在しているデータベースの一覧表示
+### 2. 存在しているテーブルの一覧表示
+### 3. データベースの切り替え
+### 4. ターミナルの終了
+
+## ⑧ 文字コードとは何か。
+
+
+
+## ⑨ 文字コードのASCII・Shift-JIS・EUC-JP・UTF-8について、それぞれの特徴は何か。
