--- a/input/06-1.md
+++ b/input/06-1.md
@@ -1,14 +1,17 @@
 ## ① DB（データベース）とは何か。また、どのような用途で使われるものか。
 
-
+データの集合を効率的に管理し、検索、更新、追加、削除などの操作を行うための組織化された仕組みのこと。情報を効果的に格納し、取り出し、管理するために設計されている。用途として、情報の集積・整理・加工の３つが主に挙げられる。
 
 ## ② RDBMSとは何か。
 
-
+「リレーショナル・データベース・マネジメント・システム」の略称で、データベース管理システムの一種である。テーブルと呼ばれる表形式のデータ構造を使用して、表の中の異なるテーブル同士を関連付けることでデータを整理する。
 
 ## ③ RDBMSとして有名なOracle・MySQL・PostgreSQL・SQL Serverについて、それぞれの特徴は何か。
 
-
+* Oracle
+* MySQL
+* PostgreSQL
+* SQL Server
 
 ## ④ MySQLの派生となるMariaDBとは何か。
 
