--- a/input/06-1.md
+++ b/input/06-1.md
@@ -9,9 +9,29 @@
 ## ③ RDBMSとして有名なOracle・MySQL・PostgreSQL・SQL Serverについて、それぞれの特徴は何か。
 
 * Oracle
+  * 無償版と有償版がある
+  * 堅牢性が高い
+  * 複数人が同時に編集しないようにロックを行う
+  * プラットフォーム間の移植が容易
+  * サポートが充実している
 * MySQL
+  * 無償版と有償版がある
+  * 商用ライセンスを取得すると、ソフトウェアは無償公開しなくてよい
+  * 柔軟性が高い
+  * 拡張性が高い
+  * 処理速度が速い
 * PostgreSQL
+  * 無償で使用可能
+  * Ingresデータベースの後継として誕生した
+  * 機能性が高い
+  * 操作が難しい
+  * テーブルの継承ができる
 * SQL Server
+  * Windows製品との親和性が高い
+  * Accessを本格的にしたデータベース
+  * データ分析の機能
+  * レポート作成の機能
+  * クラウドサービスと統合可能
 
 ## ④ MySQLの派生となるMariaDBとは何か。
 
