--- a/input/06-1.md
+++ b/input/06-1.md
@@ -35,7 +35,7 @@
 
 ## ④ MySQLの派生となるMariaDBとは何か。
 
-
+MySQLのコミュニティによるオープンソースプロジェクトとしてスタートした、MySQLと同じRDBMSの一種である。無償で使用可能なほか、幅広いOSに対応している、大規模な処理が可能、コミュニティによるサポートが手厚いなどの特徴がある。
 
 ## ⑤ DBにおける、DBサーバーとDBクライアントの役割と関係性は？
 
