--- a/input/06-1.md
+++ b/input/06-1.md
@@ -39,7 +39,20 @@ MySQLのコミュニティによるオープンソースプロジェクトとし
 
 ## ⑤ DBにおける、DBサーバーとDBクライアントの役割と関係性は？
 
-
+* DBサーバー
+  * データの格納と管理
+  * データベースエンジンの実行
+  * クライアントからのリクエスト処理
+* DBクライアント
+  * データベースへの接続
+  * ユーザーインターフェースの提供
+  * SQLクエリの生成と送信
+  * クエリ結果の処理
+* 関係性
+  * クライアント - サーバーモデル：  
+  クライアントがデータベースサーバーにリクエストを送り、サーバーがそのリクエストに対して処理を行い、結果をクライアントに返す。
+  * 複数クライアント対応：  
+  複数のクライアントからの同時接続を処理できるように設計されており、複数のユーザーまたはアプリケーションが同時にデータベースにアクセスできる。
 
 ## ⑥ DBクライアントであるmysqlコマンドについて、以下の形でDBに接続する時のコマンド書式はどのようになるか。
 
