--- a/input/06-1.md
+++ b/input/06-1.md
@@ -57,8 +57,17 @@ MySQLのコミュニティによるオープンソースプロジェクトとし
 ## ⑥ DBクライアントであるmysqlコマンドについて、以下の形でDBに接続する時のコマンド書式はどのようになるか。
 
 ### 1. ユーザーを指定して接続
+
+`mysql -u "ユーザー名"`
+
 ### 2. ユーザーのパスワード認証で接続
+
+`mysql -u "ユーザー名" -p`  
+「-p」オプションにより、パスワードがコマンドラインに表示されなくなる。
+
 ### 3. 使用するDBを指定して接続
+
+`mysql -u "ユーザー名" -p -D "データベース名"`
 
 ## ⑦ mysqlコマンドでDB接続に成功すると起動するDB操作用ターミナルにて以下の操作を行う時のコマンドは何か。
 
