--- a/input/06-1.md
+++ b/input/06-1.md
@@ -72,9 +72,20 @@ MySQLのコミュニティによるオープンソースプロジェクトとし
 ## ⑦ mysqlコマンドでDB接続に成功すると起動するDB操作用ターミナルにて以下の操作を行う時のコマンドは何か。
 
 ### 1. 存在しているデータベースの一覧表示
+
+`SHOW DATABASES;`
+
 ### 2. 存在しているテーブルの一覧表示
+
+`SHOW TABLES;`
+
 ### 3. データベースの切り替え
+
+`USE "切り替えたいデータベース名";`
+
 ### 4. ターミナルの終了
+
+`EXIT;`
 
 ## ⑧ 文字コードとは何か。
 
