--- a/input/06-1.md
+++ b/input/06-1.md
@@ -89,6 +89,21 @@ MySQLのコミュニティによるオープンソースプロジェクトとし
 
 ## ⑧ 文字コードとは何か。
 
-
+文字をコンピュータで処理や通信をするために、文字ひとつひとつに番号を割り振ったもの。
 
 ## ⑨ 文字コードのASCII・Shift-JIS・EUC-JP・UTF-8について、それぞれの特徴は何か。
+
+* ASCII
+  * 最も基本的な文字コード
+  * 数字・アルファベット・記号をそれぞれ１バイトで表現している
+* Shift-JIS
+  * ASCIIコードの文字に日本語の文字を加えたもの
+  * 外字領域と呼ばれる使っていない文字コードの領域がある
+* EUC-JP
+  * 日本のUNIX環境で使用される
+  * ASCIIと日本語の漢字・カナ文字を組み合わせたエンコード方式
+  * 可変バイトである
+* UTF-8
+  * ASCIIコードの文字に世界中の文字を加えたもの
+  * ASCIIコード以外の文字は２～６バイトで表現している
+  * 日本語は３バイトで表現されている
