--- a/output/03-2/03-2_2.md
+++ b/output/03-2/03-2_2.md
@@ -1,7 +1,7 @@
 # 初期インストールパッケージの最新化
 
-// パッケージの最新化
-$ sudo yum update -y
+## パッケージの最新化
+### $ sudo yum update -y
 NAME="Amazon Linux"   // OSの名前
 VERSION="2"   // OSのバージョン
 ID="amzn"   // OSのID
