--- a/output/03-2/03-2_3.md
+++ b/output/03-2/03-2_3.md
@@ -1,10 +1,12 @@
-// タイムゾーンの変更
-$ sudo timedatectl set-timezone Asia/Tokyo
-$ timedatectl
+# タイムゾーンの設定
+
+## タイムゾーンの変更
+### $ sudo timedatectl set-timezone Asia/Tokyo
+### $ timedatectl
 Local time: Tue 2024-01-09 13:06:26 JST  
 Universal time: Tue 2024-01-09 04:06:26 UTC  
 RTC time: Tue 2024-01-09 04:06:27  
-Time zone: Asia/Tokyo (JST, +0900)   // タイムゾーンの設定
+Time zone: Asia/Tokyo (JST, +0900)   // タイムゾーンの設定  
 NTP enabled: yes  
 NTP synchronized: yes  
 RTC in local TZ: no  
