--- a/output/03-2/03-2_4.md
+++ b/output/03-2/03-2_4.md
@@ -1,4 +1,6 @@
-// dockerアンインストール前のハードディスク使用状況
+# サーバーのハードディスク空き容量増加
+
+### dockerアンインストール前のハードディスク使用状況
 $ df -h
 Filesystem      Size  Used Avail Use% Mounted on
 devtmpfs        468M     0  468M   0% /dev
