--- a/output/03-2/03-2_5.md
+++ b/output/03-2/03-2_5.md
@@ -1,10 +1,19 @@
-// 現在インストールされているPHPのバージョン
+# PHP実行環境のセットアップ
+
+## 使用するPHPバージョンの実行環境セットアップ
+
+### 現在インストールされているPHPのバージョンを確認
+#### $ php --version
 PHP 8.2.9 (cli) (built: Aug 24 2023 20:33:12) (NTS)
 Copyright (c) The PHP Group
 Zend Engine v4.2.9, Copyright (c) Zend Technologies
     with Xdebug v3.2.2, Copyright (c) 2002-2023, by Derick Rethans
 
-// PHP8系Remiリポジトリの優先度設定
+### PHP8系Remiリポジトリの追加
+#### $ sudo yum -y install http://rpms.famillecollet.com/enterprise/remi-release-7.rpm
+
+### PHP8系Remiリポジトリの優先度設定
+#### $ sudo vim /etc/yum.repos.d/remi-php82.repo
 [remi-php82]
 name=Remi's PHP 8.2 RPM repository for Enterprise Linux 7 - $basearch
 #baseurl=http://rpms.remirepo.net/enterprise/7/php82/$basearch/
@@ -15,7 +24,11 @@ gpgcheck=1
 gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-remi
 priority=9
 
-// PHPのバージョンを再確認
+### PHP8系パッケージのインストール
+#### $ sudo yum install --enablerepo=remi-php82 php php-mbstring php-pdo_mysql php-pdo
+
+### PHPのバージョンを再確認
+#### $ php --version
 PHP 8.2.14 (cli) (built: Dec 20 2023 06:28:06) (NTS gcc x86_64)
 Copyright (c) The PHP Group
 Zend Engine v4.2.14, Copyright (c) Zend Technologies
