--- a/output/05-1/05-1_2.md
+++ b/output/05-1/05-1_2.md
@@ -17,6 +17,6 @@ Lock file operations: 28 installs, 0 updates, 0 removals
 #### 「blog」は新しいプロジェクトのディレクトリ名、「"9.*"」はバージョン指定
 
 ### 作成されたLaravelプロジェクト作成のバージョン確認
-#### cd blog/
+#### $ cd blog/
 #### $ php artisan --version
 Laravel Framework 9.52.16
