--- a/output/05-1/05-1_2.md
+++ b/output/05-1/05-1_2.md
@@ -2,8 +2,8 @@
 
 ### composerのインストール対象パッケージにlaravelインストーラーを追加
 #### $ composer global require laravel/installer
-#### composer.jsonファイルに追記している
-#### 「global」オプションで、パッケージがシステム全体で使えるようになる
+#### ※ composer.jsonファイルに追記している
+#### ※ 「global」オプションで、パッケージがシステム全体で使えるようになる
 Changed current directory to /home/ec2-user/.config/composer  
 ./composer.json has been created  
 Running composer update laravel/installer  
@@ -13,8 +13,8 @@ Lock file operations: 28 installs, 0 updates, 0 removals
 
 ### Composerコマンドにてblogディレクトリ内にLaravelプロジェクト作成
 #### $ composer create-project laravel/laravel --prefer-dist blog "9.*"
-#### 「laravel/laravel」はパッケージ名、「--prefer-dist」はアーカイブを優先使用するオプション、
-#### 「blog」は新しいプロジェクトのディレクトリ名、「"9.*"」はバージョン指定
+#### ※ 「laravel/laravel」はパッケージ名、「--prefer-dist」はアーカイブを優先使用するオプション、
+#### ※ 「blog」は新しいプロジェクトのディレクトリ名、「"9.*"」はバージョン指定
 
 ### 作成されたLaravelプロジェクト作成のバージョン確認
 #### $ cd blog/
