--- a/output/05-1/05-1_2.md
+++ b/output/05-1/05-1_2.md
@@ -2,8 +2,8 @@
 
 ### composerのインストール対象パッケージにlaravelインストーラーを追加
 #### $ composer global require laravel/installer
-#### ※ composer.jsonファイルに追記している
-#### ※ 「global」オプションで、パッケージがシステム全体で使えるようになる
+※ composer.jsonファイルに追記している
+※ 「global」オプションで、パッケージがシステム全体で使えるようになる
 Changed current directory to /home/ec2-user/.config/composer  
 ./composer.json has been created  
 Running composer update laravel/installer  
