--- a/output/05-1/05-1_2.md
+++ b/output/05-1/05-1_2.md
@@ -15,8 +15,9 @@ Lock file operations: 28 installs, 0 updates, 0 removals
 
 ### Composerコマンドにてblogディレクトリ内にLaravelプロジェクト作成
 #### $ composer create-project laravel/laravel --prefer-dist blog "9.*"
-#### ※ 「laravel/laravel」はパッケージ名、「--prefer-dist」はアーカイブを優先使用するオプション、
-#### ※ 「blog」は新しいプロジェクトのディレクトリ名、「"9.*"」はバージョン指定
+
+※ 「laravel/laravel」はパッケージ名、「--prefer-dist」はアーカイブを優先使用するオプション  
+※ 「blog」は新しいプロジェクトのディレクトリ名、「"9.*"」はバージョン指定
 
 ### 作成されたLaravelプロジェクト作成のバージョン確認
 #### $ cd blog/
