--- a/output/06-1/06-1_2.md
+++ b/output/06-1/06-1_2.md
@@ -1,6 +1,24 @@
-// 現在の文字コード設定を確認
-$ sudo mysql -u root -e "show variables like 'char%';"
-→表示される結果に「utf8mb4」の設定が存在しない。
+# MariaDBの初期設定
+
+## 文字コード設定
+
+### 現在の文字コード設定を確認
+#### $ sudo mysql -u root -e "show variables like 'char%';"
+
+※ 「utf8mb4」の設定が存在しない。
+
++--------------------------+------------------------------+  
+| Variable_name            | Value                        |  
++--------------------------+------------------------------+  
+| character_set_client     | utf8                         |  
+| character_set_connection | utf8                         |  
+| character_set_database   | latin1                       |  
+| character_set_filesystem | binary                       |  
+| character_set_results    | utf8                         |  
+| character_set_server     | latin1                       |  
+| character_set_system     | utf8                         |  
+| character_sets_dir       | /usr/share/mariadb/charsets/ |  
++--------------------------+------------------------------+  
 
 # DBのutf8mb4対応確認
 $ sudo mysql -u root -e "show charset like '%utf8mb4%';"
