--- a/output/06-1/06-1_2.md
+++ b/output/06-1/06-1_2.md
@@ -5,7 +5,7 @@
 ### 現在の文字コード設定を確認
 #### $ sudo mysql -u root -e "show variables like 'char%';"
 
-※ 「utf8mb4」の設定が存在しない。
+※ 「utf8mb4」の設定が存在しないことを確認する。
 
 +--------------------------+------------------------------+  
 | Variable_name            | Value                        |  
@@ -20,27 +20,42 @@
 | character_sets_dir       | /usr/share/mariadb/charsets/ |  
 +--------------------------+------------------------------+  
 
-# DBのutf8mb4対応確認
-$ sudo mysql -u root -e "show charset like '%utf8mb4%';"
-→「utf8mb4」の情報が一行出力されればOK。
+### DBのutf8mb4対応確認
+#### $ sudo mysql -u root -e "show charset like '%utf8mb4%';"
 
-# DBクライアント側の文字コード変更
-$ sudo vim /etc/my.cnf.d/mysql-clients.cnf
-→「[mysql]」ブロックに「default-character-set=utf8mb4」を追記する。
+※ 「utf8mb4」の情報が一行出力されればOK。
 
-# DBクライアント側の文字コードの設定反映確認
-$ sudo mysql -u root -e "show variables like 'char%';"
++---------+---------------+--------------------+--------+  
+| Charset | Description   | Default collation  | Maxlen |  
++---------+---------------+--------------------+--------+  
+| utf8mb4 | UTF-8 Unicode | utf8mb4_general_ci |      4 |  
++---------+---------------+--------------------+--------+  
+
+### DBクライアント側の文字コード変更
+#### $ sudo vim /etc/my.cnf.d/mysql-clients.cnf
+
+※ 「[mysql]」ブロックに「default-character-set=utf8mb4」を追記する。
+
+\#  
+\# These groups are read by MariaDB command-line tools  
+\# Use it for options that affect only one utility  
+\#  
+
+[mysql]default-character-set=utf8mb4  
+
+### DBクライアント側の文字コードの設定反映確認
+#### $ sudo mysql -u root -e "show variables like 'char%';"
 →表示される結果の「character_set_client」「character_set_connection」「character_set_results」が「utf8mb4」となっている。
 
-# DBサーバー側の文字コード変更
-$ sudo vim /etc/my.cnf.d/mariadb-server.cnf
+### DBサーバー側の文字コード変更
+#### $ sudo vim /etc/my.cnf.d/mariadb-server.cnf
 →「[mysqld]」ブロックの最後に「character-set-server=utf8mb4」を追記する。
 
-# DBサーバーの再起動
-$ sudo systemctl restart mariadb
-$ systemctl status mariadb
+### DBサーバーの再起動
+#### $ sudo systemctl restart mariadb
+#### $ systemctl status mariadb
 →MariaDBの状態が「active」となっている。
 
-# DBクライアント側の文字コードの設定反映確認
-$ sudo mysql -u root -e "show variables like 'char%';"
+### DBクライアント側の文字コードの設定反映確認
+#### $ sudo mysql -u root -e "show variables like 'char%';"
 →表示される結果の「character_set_server」が「utf8mb4」となっている。
