--- a/output/06-1/06-1_2.md
+++ b/output/06-1/06-1_2.md
@@ -41,7 +41,8 @@
 \# Use it for options that affect only one utility  
 \#  
 
-[mysql]default-character-set=utf8mb4  
+[mysql]  
+default-character-set=utf8mb4  
 
 ### DBクライアント側の文字コードの設定反映確認
 #### $ sudo mysql -u root -e "show variables like 'char%';"
