--- a/input/06-1.md
+++ b/input/06-1.md
@@ -67,7 +67,8 @@ MySQLのコミュニティによるオープンソースプロジェクトとし
 
 ### 3. 使用するDBを指定して接続
 
-`mysql -u "ユーザー名" -p -D "データベース名"`
+`mysql -u "ユーザー名" -p -D "データベース名"`  
+「-D」オプションは省略可能
 
 ## ⑦ mysqlコマンドでDB接続に成功すると起動するDB操作用ターミナルにて以下の操作を行う時のコマンドは何か。
 
