--- a/input/06-2.md
+++ b/input/06-2.md
@@ -1,6 +1,6 @@
 ## ① RDBMSにおけるテーブル（表）・カラム（列）・レコード（行）とは何か。またこれらの関係性は。
 
-
+![Alt text](../img/06-2_1.png)
 
 ## ② MySQL/MariaDBのカラムに定義するデータ型について、以下を扱う場合はどのデータ型を用いるのか。
 
