--- a/input/06-2.md
+++ b/input/06-2.md
@@ -1,7 +1,7 @@
 ## ① RDBMSにおけるテーブル（表）・カラム（列）・レコード（行）とは何か。またこれらの関係性は。
 
 * テーブル：データベース内でデータを格納する領域全体のこと。
-* カラム：テーブルの垂直方向の並びのことで、特定の種類の情報に関するデータを持っている。
+* カラム：テーブルの垂直方向の並びのことで、特定の種類に関する様々なデータを持っている。
 * レコード：テーブルの水平方向の並びのことで、特定のモノに関する様々なデータを持っている。  
 ![Alt text](../img/06-2_1.png)
 
