--- a/input/06-2.md
+++ b/input/06-2.md
@@ -8,12 +8,32 @@
 ## ② MySQL/MariaDBのカラムに定義するデータ型について、以下を扱う場合はどのデータ型を用いるのか。
 
 ### 1. 整数
+
+`INT` または `UNSIGNED INT`
+
 ### 2. 小数（固定小数点）
+
+`DECIMAL` または `NUMERIC`
+
 ### 3. 日付（「2020/01/01」のように日にちまでの値）
+
+`DATE`
+
 ### 4. 時間（「12:34:56」のように時間だけの値）
+
+`TIME`
+
 ### 5. 日時（「2020/01/01 12:34:56」のように日時両方含む値）
+
+`DATETIME` または `TIMESTAMP`
+
 ### 6. 文字列
+
+`VARCHAR` または `CHAR`
+
 ### 7. 65535文字を超える文字列
+
+`LONGTEXT` または `MEDIUMTEXT`
 
 ## ③ SQLとは何か。
 
