--- a/input/06-2.md
+++ b/input/06-2.md
@@ -37,7 +37,7 @@
 
 ## ③ SQLとは何か。
 
-
+データベース言語の一つで、データベース言語とは「データベースを操作するための言語」のこと。データベースにデータを格納したり、データベースに格納されているデータを抽出したり、データベースを書き換えるために使用する。
 
 ## ④ SQLの種類であるDDL・TCL・DML・DCLの違いは何か。
 
