--- a/input/06-2.md
+++ b/input/06-2.md
@@ -41,7 +41,27 @@
 
 ## ④ SQLの種類であるDDL・TCL・DML・DCLの違いは何か。
 
-
+* DDL
+  * 「Data Definition Language」の略称
+  * データ定義言語
+  * テーブル自体の作成や削除、各種設定などの命令
+  * 例：CREATE、ALTER、DROP、TRUNCATE
+* TCL
+  * 「Transaction Control Language」の略称
+  * トランザクション制御言語
+  * トランザクションの開始や終了の命令  
+  ※トランザクション：複数の SQL 文によるデータ更新を1つの処理としてまとめてデータベースに反映させること
+  * 例：COMMIT、ROLLBACK、SET TRANSACTION、SAVEPOINT
+* DML
+  * 「Data Manipulation Language」の略称
+  * データ操作言語
+  * データの格納や取り出し・更新・削除などの命令
+  * 例：SELECT、INSERT、UPDATE、DELETE、EXPLAIN、LOCK TABLE
+* DCL
+  * 「Data Control Language」の略称
+  * データ制御言語
+  * DMLやDDLの利用に関する許可や禁止を設定する命令
+  * 例：GRANT、REVOKE
 
 ## ⑤ SQL操作におけるトランザクションとは何か。
 
