--- a/input/06-2.md
+++ b/input/06-2.md
@@ -50,7 +50,7 @@
   * 「Transaction Control Language」の略称
   * トランザクション制御言語
   * トランザクションの開始や終了の命令  
-  ※トランザクション：複数の SQL 文によるデータ更新を1つの処理としてまとめてデータベースに反映させること
+  ※トランザクション：複数のSQL文によるデータ更新を、1つの処理としてまとめてデータベースに反映させること
   * 例：COMMIT、ROLLBACK、SET TRANSACTION、SAVEPOINT
 * DML
   * 「Data Manipulation Language」の略称
@@ -65,7 +65,8 @@
 
 ## ⑤ SQL操作におけるトランザクションとは何か。
 
-
+複数のSQL文によるデータ更新を、1つの処理としてまとめてデータベースに反映させること。
+![Alt text](../img/06-2_2.png)
 
 ## ⑥ トランザクションにおけるコミットとロールバックとは何か。
 
