--- a/input/06-2.md
+++ b/input/06-2.md
@@ -66,7 +66,13 @@
 ## ⑤ SQL操作におけるトランザクションとは何か。
 
 複数のSQL文によるデータ更新を、1つの処理としてまとめてデータベースに反映させること。
-![Alt text](../img/06-2_2.png)
+![Alt text](../img/06-2_2.png)  
+上記の図を例にすると、  
+1. トランザクション開始
+2. 「在庫テーブル」で保持している商品の在庫を減らす
+3. 「注文テーブル」に購入者情報を登録
+4. トランザクション終了  
+１～４までの一連の処理のことを表す。
 
 ## ⑥ トランザクションにおけるコミットとロールバックとは何か。
 
