--- a/input/06-2.md
+++ b/input/06-2.md
@@ -78,11 +78,17 @@
 
 ## ⑥ トランザクションにおけるコミットとロールバックとは何か。
 
-
+* コミット：  
+  トランザクションを正常に終了し、変更をデータベースに確定させる操作のこと。トランザクション内で行われたすべてのデータベース操作（挿入、更新、削除など）が成功し、エラーが発生しなかった場合、トランザクションをコミットしてデータベースが変更される。
+* ロールバック：  
+  トランザクションを取り消し、トランザクション内で行われたすべての変更を取り消す操作のこと。トランザクション内でエラーが発生した場合や、意図しない結果が生じた場合、トランザクションをロールバックして元の状態に戻すことができる。
 
 ## ⑦ SQLで以下の操作を行いたい時に使用する命令と種類は何か。（例：データを検索する：Select（DML））
 
 ### 1. ユーザー/テーブル等を作成する
+
+``
+
 ### 2. ユーザー/テーブル等を変更する
 ### 3. ユーザー/テーブル等を削除する
 ### 4. テーブルのデータを全削除する
