--- a/input/06-2.md
+++ b/input/06-2.md
@@ -87,16 +87,48 @@
 
 ### 1. ユーザー/テーブル等を作成する
 
-``
+`CREATE` DDL
 
 ### 2. ユーザー/テーブル等を変更する
+
+`ALTER` DDL
+
 ### 3. ユーザー/テーブル等を削除する
+
+`DROP` DDL
+
 ### 4. テーブルのデータを全削除する
+
+`DELETE` DML
+
 ### 5. 権限を付与する
+
+`GRANT` DCL
+
 ### 6. 権限を取り消す
+
+`REVOKE` DCL
+
 ### 7. トランザクションを開始する
+
+`BEGIN` または `START TRANSACTION` TCL
+
 ### 8. トランザクションをコミットする
+
+`COMMIT` TCL
+
 ### 9. トランザクションをロールバックする
+
+`ROLLBACK` TCL
+
 ### 10. データを追加する
+
+`INSERT` DML
+
 ### 11. データを更新する
+
+`UPDATE` DML
+
 ### 12. データを削除する
+
+`DELETE` DML
