--- a/input/07-1.md
+++ b/input/07-1.md
@@ -1,10 +1,14 @@
 ## ① バージョン管理システムとは何か。
 
-
+ソフトウェア開発プロジェクトなどでのファイルやコードの変更履歴を管理することで、複数人での作業を支援するツールのこと。プロジェクトの変更履歴が記録され、過去の状態に戻したり、異なるバージョンを比較することが容易になる。  
+管理対象のファイルは多岐にわたり、テキストファイルや動画ファイルなど、一般的によく用いられるファイルの他、ソースコードやビルドスクリプトなど、ソフトウェア・環境の構築に必要なファイルの管理にも適している。
 
 ## ② バージョン管理システムを導入するメリットは何か。
 
-
+* 以前のバージョンを簡単に復元できる
+* 変更内容をすべて記録できるため問題点を見つけやすい
+* デグレードの発生を防止して共同作業を安全に進められる  
+  ※デグレード：新しいバージョンのソフトウェアが、旧バージョンよりも低品質になってしまうこと
 
 ## ③ Gitとは何か。
 
