--- a/input/07-1.md
+++ b/input/07-1.md
@@ -12,7 +12,11 @@
 
 ## ③ Gitとは何か。
 
-
+バージョン管理システムで、ソフトウェア開発プロジェクトや文書の変更履歴を効果的に管理するためのツールのこと。特徴や機能は下記の通り。
+* 分散型：一人一人がローカルリポジトリを持ち、必要に応じてリモートリポジトリとのやりとりを行う。
+* 変更履歴の追跡
+* ブランチとマージ
+* 軽量で高速
 
 ## ④ GitHubとは何か。
 
