--- a/input/07-1.md
+++ b/input/07-1.md
@@ -14,9 +14,9 @@
 
 バージョン管理システムで、ソフトウェア開発プロジェクトや文書の変更履歴を効果的に管理するためのツールのこと。特徴や機能は下記の通り。
 * 分散型：一人一人がローカルリポジトリを持ち、必要に応じてリモートリポジトリとのやりとりを行う。
-* 変更履歴の追跡
-* ブランチとマージ
-* 軽量で高速
+* 変更履歴の追跡：ファイルの変更履歴を詳細に追跡でき、過去のバージョンに戻したり、異なるブランチを作成することが可能。
+* ブランチとマージ：分流（ブランチ）を作成して、本流に統合（マージ）させる。
+* 軽量で高速：処理が高速で、リポジトリのサイズも小さく保たれている。
 
 ## ④ GitHubとは何か。
 
