--- a/input/07-1.md
+++ b/input/07-1.md
@@ -20,6 +20,10 @@
 
 ## ④ GitHubとは何か。
 
-
+Gitを利用した、開発者を支援するWebサービス」の名前のこと。クラウド上でGitを用いたバージョン管理ができ、さらにGitにはない開発者に便利な機能が追加されている。特徴や機能は下記の通り。
+* 開発の効率化：機能や変更内容ごとに作業スペースを分けられる。
+* 質の高いコードが作成可能：プログラマー同士が互いにソースコードを見せあえるので、レビューの機会が増え、プロジェクトマネージャーとの共有も簡単にできる。
+* コミュニティが活発：「GitHub Community」というコミュニティ機能で、気軽に質問や回答を投稿できる。
+* 複数世代のバージョン管理が可能：誰が、いつ、どのような目的で何を編集したのかをいつでも簡単にチェックでき、バグが発生したも迅速に修正できる。
 
 ## ⑤ Gitにおいて、サーバーでファイルを追加してからGitHubに反映させるまでの具体的な流れはどのようになるか。
