--- a/output/06-2/06-2_1.md
+++ b/output/06-2/06-2_1.md
@@ -13,6 +13,7 @@
 
 ## テーブルの確認
 
+### テーブルの一覧を表示
 #### MariaDB [blog]> show tables;
     +----------------+
     | Tables_in_blog |
@@ -20,3 +21,17 @@
     | posts          |
     +----------------+
     1 row in set (0.000 sec)
+
+### テーブルの構成を表示
+#### MariaDB [blog]> desc posts;
+    +------------+-------------+------+-----+---------------------+----------------+
+    | Field      | Type        | Null | Key | Default             | Extra          |
+    +------------+-------------+------+-----+---------------------+----------------+
+    | id         | int(11)     | NO   | PRI | NULL                | auto_increment |
+    | title      | varchar(50) | NO   |     | NULL                |                |
+    | body       | text        | NO   |     | NULL                |                |
+    | created_at | timestamp   | NO   |     | current_timestamp() |                |
+    | updated_at | timestamp   | NO   |     | current_timestamp() |                |
+    | deleted_at | timestamp   | YES  |     | NULL                |                |
+    +------------+-------------+------+-----+---------------------+----------------+
+    6 rows in set (0.009 sec)
