--- a/output/06-2/06-2_1.md
+++ b/output/06-2/06-2_1.md
@@ -1,14 +1,14 @@
 # テーブルの新規作成（mysqlコマンドでblogデータベースに接続しておく）
 
 ## テーブルの作成
-    CREATE TABLE posts (
-        id INT AUTO_INCREMENT NOT NULL PRIMARY KEY,
-        title VARCHAR(50) NOT NULL,
-        body TEXT NOT NULL,
-        created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
-        updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
-        deleted_at TIMESTAMP NULL DEFAULT NULL
-    );
+    MariaDB [blog]> CREATE TABLE posts (
+            id INT AUTO_INCREMENT NOT NULL PRIMARY KEY,
+            title VARCHAR(50) NOT NULL,
+            body TEXT NOT NULL,
+            created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
+            updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
+            deleted_at TIMESTAMP NULL DEFAULT NULL
+        );
 
 ## テーブルの確認
 
