--- a/output/06-2/06-2_1.md
+++ b/output/06-2/06-2_1.md
@@ -1,6 +1,7 @@
 # テーブルの新規作成（mysqlコマンドでblogデータベースに接続しておく）
 
 ## テーブルの作成
+#### MariaDB [blog]> CREATE TABLE "テーブル名" (
     MariaDB [blog]> CREATE TABLE posts (
             id INT AUTO_INCREMENT NOT NULL PRIMARY KEY,
             title VARCHAR(50) NOT NULL,
