--- a/output/07-1/07-1_4.md
+++ b/output/07-1/07-1_4.md
@@ -1,6 +1,7 @@
 # Git操作
 
 ## GitHubでリポジトリを作成
+※ Webサイトにアクセスして任意の名前を付けて作成する。
 
 ## サーバー側の設定
 
@@ -64,5 +65,5 @@
 
 ### リモートリポジトリへの反映
 #### $ git push origin master
-※下記のように先ほど設定したコメントが表示されていればOK。  
+※ 下記のように先ほど設定したコメントが表示されていればOK。  
 ![Alt text](../../img/07-1_1_1.png)
