--- a/input/08-1.md
+++ b/input/08-1.md
@@ -1,15 +1,17 @@
 ## ① Gitにおけるリモートリポジトリ・ローカルリポジトリとは何か。またその関係性は。
 
-＊ リモートリポジトリ：共有リポジトリとして複数の開発者がアクセスし、変更の共有および同期を行うためのリポジトリのこと。
-＊ ローカルリポジトリ：開発者が自身のコンピュータ上に作成・保持するリポジトリのこと。
-＊ 関係性
+* リモートリポジトリ：共有リポジトリとして複数の開発者がアクセスし、変更の共有および同期を行うためのリポジトリのこと。
+* ローカルリポジトリ：開発者が自身のコンピュータ上に作成・保持するリポジトリのこと。
+* 関係性
     ＊ ローカルリポジトリでの変更をリモートリポジトリにPushすることで、リモートリポジトリでその変更が反映される。
     ＊ 誰かがリモートリポジトリにPushした変更は、リモートリポジトリからPullすることでローカルリポジトリに反映される。
     ＊ 誰かのローカルリポジトリが破損した場合や、別の環境で作業する必要が出てきた場合、リモートリポジトリからコピーを取得できる。
 
 ## ② Gitにおけるワークツリー・インデックス ・リポジトリとは何か。またその関係性は。
 
-
+＊ ワークツリー：
+＊ インデックス：
+*
 
 ## ③ Gitにおけるブランチとは何か。また、どのような目的で使用するか。
 
