--- a/input/08-1.md
+++ b/input/08-1.md
@@ -3,9 +3,9 @@
 * リモートリポジトリ：共有リポジトリとして複数の開発者がアクセスし、変更の共有および同期を行うためのリポジトリのこと。
 * ローカルリポジトリ：開発者が自身のコンピュータ上に作成・保持するリポジトリのこと。
 * 関係性
-    ＊ ローカルリポジトリでの変更をリモートリポジトリにPushすることで、リモートリポジトリでその変更が反映される。
-    ＊ 誰かがリモートリポジトリにPushした変更は、リモートリポジトリからPullすることでローカルリポジトリに反映される。
-    ＊ 誰かのローカルリポジトリが破損した場合や、別の環境で作業する必要が出てきた場合、リモートリポジトリからコピーを取得できる。
+    * ローカルリポジトリでの変更をリモートリポジトリにPushすることで、リモートリポジトリでその変更が反映される。
+    * 誰かがリモートリポジトリにPushした変更は、リモートリポジトリからPullすることでローカルリポジトリに反映される。
+    * 誰かのローカルリポジトリが破損した場合や、別の環境で作業する必要が出てきた場合、リモートリポジトリからコピーを取得できる。
 
 ## ② Gitにおけるワークツリー・インデックス ・リポジトリとは何か。またその関係性は。
 
