--- a/input/08-1.md
+++ b/input/08-1.md
@@ -9,9 +9,11 @@
 
 ## ② Gitにおけるワークツリー・インデックス ・リポジトリとは何か。またその関係性は。
 
-＊ ワークツリー：
-＊ インデックス：
-*
+* ワークツリー：実際に作業をしている自分のPC内のディレクトリのこと。
+* インデックス：「ステージングエリア」とも呼ばれ、ローカルリポジトリにファイルを登録（コミット）する前に一時的に保存する領域のこと。
+* リポジトリ：コード、ファイル、各ファイルの変更履歴を格納できる場所のこと。
+* 関係性：ワークツリーからインデックスにファイルを登録することを「add」、さらにインデックスからローカルリポジトリに追加することを「commit」と呼び、これらは最終的にリモートリポジトリに統合するための一連の準備である。
+### 画像を挿入する
 
 ## ③ Gitにおけるブランチとは何か。また、どのような目的で使用するか。
 
