--- a/input/08-1.md
+++ b/input/08-1.md
@@ -17,6 +17,7 @@
 
 ## ③ Gitにおけるブランチとは何か。また、どのような目的で使用するか。
 
+あるプロジェクトから分岐させることで、プロジェクト本体に影響を与えず開発ができる機能のこと。  
 
 
 ## ④ Gitにおけるプルリクエストとは何か。また、どのような目的で使用するか。
