--- a/input/08-1.md
+++ b/input/08-1.md
@@ -18,7 +18,7 @@
 ## ③ Gitにおけるブランチとは何か。また、どのような目的で使用するか。
 
 あるプロジェクトから分岐させることで、プロジェクト本体に影響を与えず開発ができる機能のこと。  
-あ
+ブランチ機能により、お互いの作業に影響を与えることがないため、複数の開発者が同時並行で作業を進められる。
 
 ## ④ Gitにおけるプルリクエストとは何か。また、どのような目的で使用するか。
 
