--- a/input/08-1.md
+++ b/input/08-1.md
@@ -22,7 +22,8 @@
 
 ## ④ Gitにおけるプルリクエストとは何か。また、どのような目的で使用するか。
 
-
+開発者のローカルリポジトリでの変更を、メインのブランチに統合するリクエストのこと。  
+機能追加や改修などの変更箇所が同時に表示されるので、チーム内でのコミュニケーションを促進し、コードの品質が向上する。
 
 ## ⑤ Gitで以下の操作を行うコマンドは何か。
 
