--- a/input/08-1.md
+++ b/input/08-1.md
@@ -29,7 +29,11 @@
 
 ### 1. ローカルブランチの一覧を表示する。
 
+`git branch`
+
 ### 2. リモートブランチの一覧を表示する。
+
+`git branch -r or git remote show "リモート名"`
 
 ### 3. ローカルリポジトリ内のリモートブランチを最新化する。
 
