--- a/input/08-1.md
+++ b/input/08-1.md
@@ -33,9 +33,11 @@
 
 ### 2. リモートブランチの一覧を表示する。
 
-`git branch -r or git remote show "リモート名"`
+`git branch -r` または `git remote show origin(リモート名)`
 
 ### 3. ローカルリポジトリ内のリモートブランチを最新化する。
+
+
 
 ### 4. 特定のローカルブランチに特定のリモートブランチの差分を反映する。
 
