--- a/input/08-1.md
+++ b/input/08-1.md
@@ -41,6 +41,8 @@
 
 ### 4. 特定のローカルブランチに特定のリモートブランチの差分を反映する。
 
+`git pull "origin(リモート名)" "main(ブランチ名)"`
+
 ### 5. 特定のリモートブランチを元に新規ローカルブランチを作成する。
 
 ### 6. 現在作業しているブランチを確認する。
