--- a/input/08-1.md
+++ b/input/08-1.md
@@ -45,6 +45,8 @@
 
 ### 5. 特定のリモートブランチを元に新規ローカルブランチを作成する。
 
+`git checkout -b "新しいブランチ名" "リモート名or既存のブランチ名"`
+
 ### 6. 現在作業しているブランチを確認する。
 
 ### 7. 作業するブランチを切り替える。
