--- a/input/08-1.md
+++ b/input/08-1.md
@@ -41,7 +41,7 @@
 
 ### 4. 特定のローカルブランチに特定のリモートブランチの差分を反映する。
 
-`git pull "origin(リモート名)" "main(ブランチ名)"`
+`git pull "origin(リモート名)" "mainとかmaster(ブランチ名)"`
 
 ### 5. 特定のリモートブランチを元に新規ローカルブランチを作成する。
 
@@ -52,6 +52,8 @@
 `git branch` または `git status`
 
 ### 7. 作業するブランチを切り替える。
+
+`git checkout "mainとかmaster(ブランチ名)"`
 
 ### 8. コミット対象ファイル/ディレクトリをインデックス に追加する。
 
