--- a/input/08-1.md
+++ b/input/08-1.md
@@ -69,7 +69,7 @@
 
 ## ⑥ HTTPとは何か。
 
-
+「HyperText Transfer Protocol」の略称で、WebサーバとクライアントのWebブラウザが、データを送受信するためのプロトコル（コンピュータ同士で通信する際、決められた手順や規格のこと）のこと。
 
 ## ⑦ HTTPのリクエスト・レスポンスとは何か。またその関係性は。
 
